<resources>
    <string name="app_name">Ligo</string>


    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="dummy_content">DUMMY\nIMAGE</string>

    <string name="title_activity_welcome_screen">WelcomeScreenActivity</string>
    <string name="title_activity_signin">SignIn</string>
    <string name="title_activity_signup">SignUp</string>
    <string name="title_activity_userprofile">User Profile</string>


    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? click on Sign Up</string>
    <string name="text_already_member">Already a member? Sign In</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_age">Age</string>
    <string name="hint_country">Country</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
